<resources>
    <string name="app_name">Correct</string>
    <string name="staff_id">Staff ID</string>
    <string name="login">Log in</string>
    <string name="login_submit">Log in</string>
    <string name="field_empty">Staff ID must be filled.</string>
    <string name="error_user_not_found">Staff ID was not associated with any user.</string>
    <string name="error_unknown">Unknown error</string>
    <string name="check_in">Check-In</string>
    <string name="profile">My Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_title">My profile</string>
    <string name="profile_registered_contact">Registered contact number</string>
    <string name="profile_distributor">Distributor details</string>
    <string name="error_session_expired">Session expired. Please login again.</string>
    <string name="error_invalid_token">Invalid authentication token. Please login again.</string>
    <string name="log_out">Log out</string>
    <string name="copied_to_clipboard">copied to clipboard</string>
    <string name="search_stores">Search store</string>
    <string name="check_in_title">Check-in</string>
    <string name="store_person_in_charge">Store person-in-charge</string>
    <string name="no_products_sold_yet">No products sold yet!</string>
    <string name="market_products">Market products to this store and report sales to administrator to reflect CRC.</string>
    <string name="change_language">Change language</string>
    <string name="you_sure_to_logout">Are you sure you want to log out?</string>
    <string name="logout_question_yes">Yes</string>
    <string name="logout_question_no">No</string>
    <string name="pic_dial">Dial</string>
    <string name="pic_copy">Copy</string>
    <string name="close">Close</string>
</resources>