<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!--Toolbar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/login_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="4dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_tall_height"
            app:contentInsetStart="0dp"
            android:theme="@style/ThemeOverlay.MaterialComponents.Light">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="bottom"
                    android:visibility="visible"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="@dimen/default_margin_vertical"
                    android:layout_marginStart="@dimen/default_margin_horizontal"
                    android:textStyle="bold"

                    style="@style/TextAppearance.AppCompat.Display1"/>

            </FrameLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!--Username TextInput-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/staff_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/default_margin_horizontal"
        android:layout_marginEnd="@dimen/default_margin_horizontal"
        app:boxStrokeColor="@color/colorLinkBlue"
        app:hintTextColor="@color/colorLinkBlue"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Log In Button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_submit"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorLinkBlue"
        app:rippleColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/login_text_input_layout"
        app:layout_constraintRight_toRightOf="@id/login_text_input_layout"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:icon="@drawable/ic_arrow_forward_black_24dp"
        app:iconTint="@android:color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>