<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <!--Toolbar-->
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/profile_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_toolbar"
                android:elevation="4dp">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/profile_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_tall_height"
                    app:contentInsetStart="0dp"
                    android:theme="@style/ThemeOverlay.MaterialComponents.Light">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/profile_toolbar_title"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="start"
                            android:gravity="bottom"
                            android:visibility="visible"
                            android:text="@string/profile_title"
                            android:textColor="@android:color/white"
                            android:layout_marginBottom="@dimen/default_margin_vertical"
                            android:layout_marginStart="@dimen/default_margin_horizontal"
                            android:textStyle="bold"
                            style="@style/TextAppearance.AppCompat.Display1"/>

                    </FrameLayout>

                </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <!--User Profile Details-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/default_margin_horizontal"
                android:paddingRight="@dimen/default_margin_horizontal"
                android:paddingTop="@dimen/default_margin_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_header_1"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_body"
                    android:textColor="@color/colorPrimaryText"/>

            </LinearLayout>

            <!--Registered phone number-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/default_margin_horizontal"
                android:paddingRight="@dimen/default_margin_horizontal"
                android:paddingTop="@dimen/default_margin_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_registered_contact"
                    android:textSize="@dimen/textSize_header_section"
                    android:textStyle="bold"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/profile_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_body"
                    android:textColor="@color/colorPrimaryText"
                    android:drawableTint="@color/colorPrimaryText"
                    android:drawablePadding="10dp"
                    android:drawableEnd="@drawable/ic_content_copy_black_24dp"
                    android:background="?attr/selectableItemBackground" />

            </LinearLayout>

            <!--Distributor details-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/default_margin_horizontal"
                android:paddingRight="@dimen/default_margin_horizontal"
                android:paddingTop="@dimen/default_margin_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_distributor"
                    android:textSize="@dimen/textSize_body"
                    android:textStyle="bold"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/profile_dist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSize_header_2"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/profile_dist_addr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_body"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/profile_dist_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_body"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/profile_dist_pic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize_body"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_marginEnd="20dp"/>

                    <TextView
                        android:id="@+id/profile_dist_pic_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize_body"
                        android:textColor="@color/colorLinkBlue"
                        android:textStyle="bold"
                        android:background="?attr/selectableItemBackground"/>

                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_language_button"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                android:layout_marginStart="@dimen/default_margin_horizontal"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <!--Log Out Button-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textColor="@android:color/holo_red_dark"
                app:rippleColor="@android:color/holo_red_light"
                android:layout_marginStart="@dimen/default_margin_horizontal"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>